This is automatically filled in now.

--- a/demo/braktif.html
+++ b/demo/braktif.html
@@ -25,12 +25,7 @@
 <button id="step">Step</button>
 Speed: <input id="speed" type="range" min="0" max="200" value="0" />
 
-<select id="select_source">
-  <option>(select one...)</option>
-  <option>test</option>
-  <option>test2</option>
-  <option>test3</option>
-</select>
+<select id="select_source"></select>
 
 <textarea id="input" rows="10" cols="50"></textarea>
 
